# freeze-attn

./: .gitignore  .pre-commit-config.yaml  README.md  basedpyrightconfig.json  pyproject.toml  ruff.toml
src/freeze_attn/: auto.py  main.py
src/llama/: main.py  main_x.py
