[project]
name = "llama"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Donald Thompson", email = "witt3rd@witt3rd.com" }
]
dependencies = [
    "tiktoken>=0.8.0",
    "blobfile>=3.0.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "accelerate>=1.2.1",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llama"]
